fix spacing

--- a/cireg/static/sass/project.scss
+++ b/cireg/static/sass/project.scss
@@ -958,7 +958,7 @@ section.download-page-content {
 		}
 	}
 	.show-all {
-		margin: 10rem 0 14rem 0;
+		margin: 5rem 0 9rem 0;
 		@media (max-width: 575px) {
 			margin: 0 0 8rem 0;
 		}
